Bug 15286 - auth3_generate_session_info_pac leaks wbcAuthUserInfo
Summary: auth3_generate_session_info_pac leaks wbcAuthUserInfo
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.18.0rc1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-19 08:18 UTC by Stefan Metzmacher
Modified: 2023-02-16 16:38 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for 4.18.next, 4.17.next, 4.16.next. (1.04 KB, patch)
2023-01-19 21:25 UTC, Jeremy Allison
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2023-01-19 08:18:22 UTC
Every kerberos authentication against on a file server leak the memory
of wbcAuthUserInfo...
Comment 1 Samba QA Contact 2023-01-19 19:47:03 UTC
This bug was referenced in samba master:

370b777202bbd9730209a3e18de102b4f163f18d
Comment 2 Jeremy Allison 2023-01-19 21:25:23 UTC
Created attachment 17740 [details]
git-am fix for 4.18.next, 4.17.next, 4.16.next.
Comment 3 Jule Anger 2023-01-23 09:07:27 UTC
Pushed to autobuild-v4-{18,17,16}-test.
Comment 4 Samba QA Contact 2023-01-23 10:28:04 UTC
This bug was referenced in samba v4-17-test:

961eda75a0ce31c00ec933e38835af6ff8011084
Comment 5 Samba QA Contact 2023-01-23 11:00:55 UTC
This bug was referenced in samba v4-16-test:

44ec3e4f29208406ae6f73416b092d8754adfb0b
Comment 6 Samba QA Contact 2023-01-26 17:53:03 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.5):

961eda75a0ce31c00ec933e38835af6ff8011084
Comment 7 Samba QA Contact 2023-01-31 12:50:16 UTC
This bug was referenced in samba v4-18-test:

f21236ac004b42f822214277c6f8be4c6450b13f
Comment 8 Jule Anger 2023-01-31 13:13:22 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2023-02-01 17:42:43 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.0rc2):

f21236ac004b42f822214277c6f8be4c6450b13f
Comment 10 Samba QA Contact 2023-02-16 16:38:37 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.9):

44ec3e4f29208406ae6f73416b092d8754adfb0b